se añaden bootstrap a todo el proyecto

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!--inicio de navbar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-gold">
         <div class="container-fluid">
-          <a class="navbar-brand"  href="#"><img src="img/favicon.png" alt=""></a>
+          <a class="navbar-brand"  href="index.html"><img src="img/favicon.png" alt=""></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -51,10 +51,10 @@
             <img src="img/header.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="img/header2.png" class="d-block w-100" alt="...">
+            <img src="img/header2.png"  class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="img/header3.png" class="d-block w-100" alt="...">
+            <img src="img/header3.png"  class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
