--- a/clubes-internacionales.html
+++ b/clubes-internacionales.html
@@ -4,13 +4,15 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="CAMISETAS, MESSI, NEYMAR, BENZEMA, REAL MADRID, MILAN, FOOTBALL, BAYERN MUNICH, CRISTIANO RONALDO, BARCELONA, PSG">
+    <meta name="description" content="EL FUTBOL EUROPEO MAS REPRESENTADO QUE NUNCA, GRAN VARIEDAD DE CAMISETAS DEL VIEJO CONTINENTE, SENTITE QUE ESTAS JUGANDO LA CHAMPIONS">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!--mi css-->
     <link rel="stylesheet" href="css/style.css">
 
-    <title>MANTO SAGRADO CAMISETAS DE FUTBOL</title>
+    <title>CLUBES INTERNACIONALES</title>
   </head>
   <body>
     <!--inicio de navbar-->
