--- a/contacto.html
+++ b/contacto.html
@@ -4,13 +4,15 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="CAMISETAS, SELECCION, CLUBES, OFERTAS, FUTBOL, MESSI, BRASIL, BOCA, RIVER, BARCELONA, PSG">
+    <meta name="description" content="MANTO SAGRADO LAS MEJORES CAMISETAS DE FUTBOL QUE PODRAS ENCONTRAR EN INTERNET, OFERTAS, TALLES, MODELOS Y MUCHO MAS">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!--mi css-->
     <link rel="stylesheet" href="css/style.css">
 
-    <title>MANTO SAGRADO CAMISETAS DE FUTBOL</title>
+    <title>CONTACTO</title>
   </head>
   <body>
     <!--inicio de navbar-->
