--- a/selecciones.html
+++ b/selecciones.html
@@ -4,13 +4,16 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="CAMISETAS, SELECCION, CLUBES, OFERTAS, FUTBOL, MESSI, BRASIL, ALEMANIA, ITALIA, URUGUAY, ESPAÑA, RONALDO">
+    <meta name="description" content="EN ESTA PESTAÑA ENCONTRARAS LAS CAMISETAS DE LAS SELECCIONES NACIONALES MAS IMPORTANTES DEL MUNDO">
+    
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!--mi css-->
     <link rel="stylesheet" href="css/style.css">
 
-    <title>MANTO SAGRADO CAMISETAS DE FUTBOL</title>
+    <title>SELECCIONES NACIONALES</title>
   </head>
   <body>
     <!--inicio de navbar-->
